--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<h2>Connect To our Fivem server</h2>
 				</div>
 				<div class="col-md-4">
-					<a href="fivem://connect/" class="button-cta">CONNEXION</a>
+					<a href="fivem://connect/cfx.re/join/5rayed" class="button-cta">CONNEXION</a>
 				</div>
 			</div>
 		</div>
